workout (0.13) unstable; urgency=low

  * removed superflous Null Store
  * merged Store::Memory into Store
  * made some wkinfo output optional for speed
  * Store->chunk_add() no longer clones the chunk!!!!
  * removed now unneeded Store->_chunk_add
  * converted Store::Gpx to XML::SAX
  * fixed encoding for (new)Gpx, HRM and Wkt Stores
  * added rudimentary Documentation to Store.pm

 -- Rainer Clasen <bj@zuto.de>  Mon, 07 Dec 2009 16:04:28 +0100

workout (0.12) unstable; urgency=low

  * Marker: fixed memory leak
  * SRM: fix to use more up to date cp850

 -- Rainer Clasen <bj@zuto.de>  Thu, 03 Dec 2009 19:56:57 +0100

workout (0.11) unstable; urgency=low

  * HRM: read athlete data
  * wkconv/wkmerge/wkinfo: pick athlete info from source when available
  * SRM: properly de-/encode comments

 -- Rainer Clasen <bj@zuto.de>  Thu, 03 Dec 2009 10:01:41 +0100

workout (0.10) unstable; urgency=low

  * Store::SRM: use block timestamps as chunk-end on read *and* write...
  * wkdelta: make --field work
  * some bugfixes for subsecond timestamps/recints
  * fix reading HRM timestamps
  * wkmerge: check fields to merge

 -- Rainer Clasen <bj@zuto.de>  Sat, 01 Aug 2009 23:18:21 +0200

workout (0.09) unstable; urgency=low

  * added wkdist, wkhisto
  * feed pre-build chart to MyChart::Gtk (obsoleting Workout::Gtk::Chart::*)
  * added torque info to Chunks and wkinfo output
  * added Workout::Filter::Zone - caculcate time in specified zones
  * added support for new SRM7 files introduced for PCVI
  * fixed bug in SRM6 writing where the power data was truncated to 2048W

 -- Rainer Clasen <bj@zuto.de>  Thu, 23 Jul 2009 09:51:04 +0200

workout (0.08) unstable; urgency=low

  * added Filter::FTP for calculating NP, VI, IF, and TSS
  * set window titles in GTK apps
  * added wkpmc for calculating and plotting CTL, ATL and TSB
  * added Filter::Max 
  * wkinfo: include 20min max power

 -- Rainer Clasen <bj@zuto.de>  Thu, 24 Apr 2009 12:13:28 +0200
