@@ -8,8 +8,9 @@ workout (0.13) unstable; urgency=low
   * converted Store::Gpx to XML::SAX
   * fixed encoding for (new)Gpx, HRM and Wkt Stores
   * added rudimentary Documentation to Store.pm
+  * reworked Iterator store handling. Allows multiple stores per chain.
 
- -- Rainer Clasen <bj@zuto.de>  Mon, 07 Dec 2009 16:04:28 +0100
+ -- Rainer Clasen <bj@zuto.de>  Mon, 07 Dec 2009 19:08:35 +0100
 
 workout (0.12) unstable; urgency=low
 
